添加了KAFKA相关命令

--- a/环境搭建.md
+++ b/环境搭建.md
@@ -85,3 +85,21 @@ Zookeeper和kafka服务一直打开
 - 创建消费者
 
 见代码中KafkaReceivce.java
+
+### KAFKA相关命令
+
+- 创建TOPIC
+
+		kafka-topics.bat --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic test
+
+- 查询所有TOPIC
+		
+		kafka-topics.bat --list --zookeeper localhost:2181
+
+- 生产消息
+
+		kafka-console-producer.bat --broker-list localhost:9092 --topic test
+
+- 消费消息
+
+		kafka-console-consumer.bat --bootstrap-server localhost:9092 --topic test --from-beginning
